objects/RIC_UDC__c.object
<CustomObject>
    <description>RIC Plann&apos;R - Workflow OPP &amp; Produits Finis</description>
    <fields>
        <fullName>RIC_Cle_JDE__c</fullName>
        <externalId>true</externalId>
        <label>Clé JDE</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RIC_Code__c</fullName>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Description2__c</fullName>
        <label>Description 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_TableAlias__c</fullName>
        <label>Alias de table JDE</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>RIC Valeur UDC</label>
    <listViews>
        <fullName>RIC_00_CN</fullName>
        <columns>NAME</columns>
        <columns>RIC_Code__c</columns>
        <columns>RIC_Description__c</columns>
        <columns>RIC_Description2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_TableAlias__c</field>
            <operation>equals</operation>
            <value>00_CN</value>
        </filters>
        <label>Pays</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_00_UM</fullName>
        <columns>NAME</columns>
        <columns>RIC_Code__c</columns>
        <columns>RIC_Description__c</columns>
        <columns>RIC_Description2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_TableAlias__c</field>
            <operation>equals</operation>
            <value>00_UM</value>
        </filters>
        <label>Unités de mesure</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_40_CM</fullName>
        <columns>NAME</columns>
        <columns>RIC_Code__c</columns>
        <columns>RIC_Description__c</columns>
        <columns>RIC_Description2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_TableAlias__c</field>
            <operation>equals</operation>
            <value>40_CM</value>
        </filters>
        <label>Vente/Stock - Achat</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_40_P1</fullName>
        <columns>NAME</columns>
        <columns>RIC_Code__c</columns>
        <columns>RIC_Description__c</columns>
        <columns>RIC_Description2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_TableAlias__c</field>
            <operation>equals</operation>
            <value>40_P1</value>
        </filters>
        <label>Codes publicité</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_41B_DG</fullName>
        <columns>NAME</columns>
        <columns>RIC_Code__c</columns>
        <columns>RIC_Description__c</columns>
        <columns>RIC_Description2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_TableAlias__c</field>
            <operation>equals</operation>
            <value>41B_DG</value>
        </filters>
        <label>Promo GD/HD/Cash</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_41_01</fullName>
        <columns>NAME</columns>
        <columns>RIC_Code__c</columns>
        <columns>RIC_Description__c</columns>
        <columns>RIC_Description2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_TableAlias__c</field>
            <operation>equals</operation>
            <value>41_01</value>
        </filters>
        <label>Qualités</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_41_02</fullName>
        <columns>NAME</columns>
        <columns>RIC_Code__c</columns>
        <columns>RIC_Description__c</columns>
        <columns>RIC_Description2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_TableAlias__c</field>
            <operation>equals</operation>
            <value>41_02</value>
        </filters>
        <label>Groupes traitement entrepôt</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_41_05</fullName>
        <columns>NAME</columns>
        <columns>RIC_Code__c</columns>
        <columns>RIC_Description__c</columns>
        <columns>RIC_Description2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_TableAlias__c</field>
            <operation>equals</operation>
            <value>41_05</value>
        </filters>
        <label>Matières premières/Balance</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_41_06</fullName>
        <columns>NAME</columns>
        <columns>RIC_Code__c</columns>
        <columns>RIC_Description__c</columns>
        <columns>RIC_Description2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_TableAlias__c</field>
            <operation>equals</operation>
            <value>41_06</value>
        </filters>
        <label>Contenances</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_41_07</fullName>
        <columns>NAME</columns>
        <columns>RIC_Code__c</columns>
        <columns>RIC_Description__c</columns>
        <columns>RIC_Description2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_TableAlias__c</field>
            <operation>equals</operation>
            <value>41_07</value>
        </filters>
        <label>Produits</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_41_08</fullName>
        <columns>NAME</columns>
        <columns>RIC_Code__c</columns>
        <columns>RIC_Description__c</columns>
        <columns>RIC_Description2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_TableAlias__c</field>
            <operation>equals</operation>
            <value>41_08</value>
        </filters>
        <label>Typologies planification</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_41_09</fullName>
        <columns>NAME</columns>
        <columns>RIC_Code__c</columns>
        <columns>RIC_Description__c</columns>
        <columns>RIC_Description2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_TableAlias__c</field>
            <operation>equals</operation>
            <value>41_09</value>
        </filters>
        <label>Regroupements qualité</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_41_8</fullName>
        <columns>NAME</columns>
        <columns>RIC_Code__c</columns>
        <columns>RIC_Description__c</columns>
        <columns>RIC_Description2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_TableAlias__c</field>
            <operation>equals</operation>
            <value>41_8</value>
        </filters>
        <label>Catégories dénombrement périodique</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_41_9</fullName>
        <columns>NAME</columns>
        <columns>RIC_Code__c</columns>
        <columns>RIC_Description__c</columns>
        <columns>RIC_Description2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_TableAlias__c</field>
            <operation>equals</operation>
            <value>41_9</value>
        </filters>
        <label>Clé G/L</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>RIC_41_C</fullName>
        <columns>NAME</columns>
        <columns>RIC_Code__c</columns>
        <columns>RIC_Description__c</columns>
        <columns>RIC_Description2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIC_TableAlias__c</field>
            <operation>equals</operation>
            <value>41_C</value>
        </filters>
        <label>Types de produit</label>
        <language>fr</language>
    </listViews>
    <nameField>
        <label>Valeur UDC</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RIC Valeurs UDC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>